# serverless-graphql-mesh

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
config/: shared_infra-outputs.json  subgraph-list.json  supergraph.yaml
crates/: Cargo.toml
crates/.cargo/: config
crates/examples/: config-jaeger.yaml  config.yaml
crates/lambda-router/: Cargo.toml
crates/lambda-router/examples/: hello-world.rs
crates/lambda-router/src/: lib.rs
crates/lambda-router/src/test_data/: mod.rs
crates/lambda-router/src/utils/: environment.rs  fixtures.rs  mod.rs
crates/runtime/aws-fargate/: Cargo.toml  Dockerfile
crates/runtime/aws-lambda/: .gitignore  Cargo.toml  Dockerfile
crates/runtime/aws-lambda/src/: lib.rs  utils.rs
crates/runtime/aws-lambda/src/sdk/: config.rs  mod.rs  schema.rs  svc.rs
crates/scripts/: build.sh  zcc  zclang  zxx
dockerfiles/: jager.docker-compose.yaml
entrypoints/gateway/: cdk.json  package-lock.json  package.json
entrypoints/gateway/lambda/: index.ts
entrypoints/gateway/lib/: gateway-stack.ts
entrypoints/router/: .gitignore  cdk.json  package.json
entrypoints/router/lambda/: Cargo.toml  Dockerfile  zcc  zxx
entrypoints/router/lambda/.cargo/: config
entrypoints/router/lambda/src/: main.rs
entrypoints/router/lib/: router-stack.ts
entrypoints/router/scripts/: build-lambda.sh  build-service.sh  build.sh  deploy-service.sh  package-lambda.sh
entrypoints/router/test/: gateway.test.ts
gateway/: package.json
gateway/lambda/: Cargo.toml  Dockerfile  rust-toolchain.toml
gateway/lambda/src/: lib.rs
gateway/lib/: gateway-stack.ts
gateway/scripts/: package-lambda.sh
infra/: cdk.context.json  package-lock.json  package.json
infra/lib/: infra-stack.ts
scripts/: rover-introspection.sh
services/collections/: .gitignore  cdk.json  package.json
services/collections/lambda/: Cargo.toml
services/collections/lib/: collections-stack.ts
services/customers/: package-lock.json  package.json
services/customers/lambda/: Cargo.toml  Dockerfile  zxx
services/customers/lambda/.cargo/: config
services/customers/lambda/src/: lib.rs  main.rs
services/customers/lib/: customers-stack.ts
services/customers/scripts/: build-lambda.sh  deploy-service.sh
services/orders/: package.json
services/orders/lambda/: .dockerignore
services/orders/lambda/src/: main.rs
services/orders/lib/: orders-stack.ts
services/orders/test/: customers.test.ts
services/products/: cdk.json  package.json
services/products/lambda/: Cargo.toml  zcc
services/products/lambda/.cargo/: config
services/products/lambda/src/: lib.rs  main.rs
services/products/lib/: products-stack.ts
services/products/scripts/: package-lambda.sh
services/reviews/: cdk.json  package.json
services/reviews/lambda/: Cargo.toml  Dockerfile  zcc  zxx
services/reviews/lambda/src/: lib.rs  main.rs
services/reviews/lib/: reviews-stack.ts
services/reviews/scripts/: build-service.sh
services/wishlists/: package.json
services/wishlists/lambda/: Cargo.toml
services/wishlists/lib/: wishlist-stack.ts
services/wishlists/scripts/: clean-lambda.sh
