[package]
edition = "2021"
name = "lambda"
version = "0.1.0"

[dependencies]
anyhow = "1.0.53"
apollo-router = { git = "https://github.com/apollographql/router", default-features = false }
axum = {version = "0.4.4", features = ["headers"]}
structopt = {version = "0.3.26", default-features = false}
lambda-web = { version = "0.1.8", features = ["hyper"] }
#tracing = "0.1"
#tracing-subscriber = { version = "0.3.7", features = ["fmt", "json", "env-filter"] }
#libc = "0.2.114"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.74"
tokio = { version = "1.15.0", features = ["full"] }
atty = "0.2.14"
directories = "4.0.1"
futures = "0.3.19"
#opentelemetry = "0.17.0"
#opentelemetry-otlp = "0.10.0"


#[patch.crates-io]
#opentelemetry = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", rev = "6b3aa02aa" }
#opentelemetry-otlp = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", rev = "6b3aa02aa" }

[profile.release]
codegen-units = 1
incremental = false
lto = "thin"
opt-level = "z"
panic = 'abort'

[profile.dev]
opt-level = 3

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[lib]
path = "src/lib.rs"