[package]
edition = "2021"
name = "lambda"
version = "0.1.0"

[dependencies]
async-graphql = "3.0.25"
async-graphql-axum = "3.0.25"
async-graphql-extension-apollo-tracing = { version = "0.4.2" }
openssl = { version = "0.10", features = ["vendored"] }
axum = {version = "0.4.4", features = ["headers"]}
lambda-web = { version = "0.1.8", features = ["hyper"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.5", features = ["fmt", "json", "env-filter"] }
libc = "0.2.114"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.74"
tokio = { version = "1.15.0", features = ["full"] }

[profile.release]
codegen-units = 1
incremental = false
lto = "thin"
opt-level = "z"
panic = 'abort'

[profile.dev]
opt-level = 3

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"